--- a/css/main.css
+++ b/css/main.css
@@ -4,11 +4,25 @@ body {
   background: #F1F1F1; }
 
 a {
-  color: #E02E47; }
+  color: #E02E47;
+  -webkit-transition: all 200ms ease-in-out;
+  -moz-transition: all 200ms ease-in-out;
+  -o-transition: all 200ms ease-in-out;
+  transition: all 200ms ease-in-out; }
+  a:hover {
+    color: #561315;
+    text-decoration: none; }
 
 header {
   background: #E02E47;
   height: 44px; }
+  header .social-links {
+    text-align: right;
+    padding-top: 10px; }
+    header .social-links li {
+      display: inline-block; }
+      header .social-links li a {
+        padding: 10px; }
 
 h2 {
   font-family: "proxima-nova-extrabold", sans-serif;
@@ -135,7 +149,7 @@ main .intro {
   text-align: center;
   color: #F1F1F1;
   font-family: "proxima-nova-light", sans-serif;
-  margin: 50px 0;
+  margin: 50px auto;
   padding: 0 30px; }
   main .intro .lead {
     font-size: 14px;
@@ -155,7 +169,7 @@ main .intro {
   -o-transition: all 200ms ease-in-out;
   transition: all 200ms ease-in-out; }
   .btn-primary:hover {
-    background: #BC2841; }
+    background: #561315; }
 
 strong {
   font-family: "proxima-nova-semibold", sans-serif; }
@@ -166,6 +180,13 @@ footer p {
   text-transform: uppercase;
   font-size: 10px;
   text-align: center; }
+
+hr {
+  border: 0;
+  height: 15px;
+  background: url(../images/line.svg) 50% 0 no-repeat;
+  margin: 0;
+  margin-top: -10px; }
 
 form {
   margin-top: 20px; }
@@ -199,7 +220,44 @@ input[type="color"]:focus,
   outline: 0 none; }
 
 @media (min-width: 48em) {
+  h2 {
+    font-size: 26px;
+    letter-spacing: 3px;
+    margin-bottom: 8px; }
+
+  .description {
+    font-size: 20px; }
+
+  .container {
+    max-width: 768px; }
+
   iframe {
-    height: 300px; } }
+    height: 300px;
+    margin-bottom: 20px; }
+
+  main .tagline {
+    float: right; }
+    main .tagline .lead {
+      font-size: 34px;
+      line-height: 40px;
+      margin-top: 50px; }
+  main .team img {
+    width: 400px; }
+  main .intro .lead {
+    font-size: 20px;
+    line-height: 30px;
+    font-family: "proxima-nova-light", sans-serif; }
+
+  .contact-details {
+    float: right;
+    padding-top: 40px; }
+    .contact-details li {
+      margin-bottom: 25px; }
+    .contact-details .social-links ul {
+      text-align: left; }
+
+  .contact-form form {
+    width: 80%;
+    margin: 0 auto; } }
 
 /*# sourceMappingURL=main.css.map */
