added profile pictures + minor text fixes

--- a/css/main.sass
+++ b/css/main.sass
@@ -53,6 +53,10 @@ h2
 .team-member
   text-align: center
 
+  img
+    border-radius: 100px
+    width: 77px
+
   p
     font-size: 10px
     font-family: $font-light
@@ -265,6 +269,9 @@ input[type="color"]:focus,
 
 // Medium devices (tablets, 48em and up)
 @media (min-width: 48em)
+
+  hr
+    margin-bottom: 20px
 
   h2
     font-size: 26px
