--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,9 @@ h2 {
 
 .team-member {
   text-align: center; }
+  .team-member img {
+    border-radius: 100px;
+    width: 77px; }
   .team-member p {
     font-size: 10px;
     font-family: "proxima-nova-light", sans-serif;
@@ -220,6 +223,9 @@ input[type="color"]:focus,
   outline: 0 none; }
 
 @media (min-width: 48em) {
+  hr {
+    margin-bottom: 20px; }
+
   h2 {
     font-size: 26px;
     letter-spacing: 3px;
